syntax = "proto3";

package admin;

option go_package = "./pkg/admin/pb";

service AdminAuthService {
  rpc AdminSignUp(AdminSingUpRequest) returns (AdminSignUpResponse) {};
  rpc AdminLogin(AdminLoginInRequest) returns (AdminLoginResponse) {};
}

// Register
message AdminSingUpRequest {
  string name = 1;
  string email = 2;
  string password = 4;
  string confirmpassword = 5;
}

message AdminSignUpResponse {
  int64 status = 1;
  string error = 2;
}

message AdminLoginInRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  string token = 1;
  string status = 2;
  string error = 3;
}
